2003-07-22  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.81 is released.

2003-06-11  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.80 is released.

2003-06-03  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.79 is released.

2003-05-21  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.78 is released.

2003-05-15  Jason R. Mastaler  <jason@mastaler.com>

	* THANKS (Contributions): Add Ed Blackman.

2003-05-01  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.77 is released.

2003-04-24  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.76 is released.

2003-04-19  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.75 is released.

2003-04-12  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.74 is released.

2003-04-08  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* THANKS (Contributions): Add Jim Ramsay.

2003-03-26  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.73 is released.

2003-03-23  Jason R. Mastaler  <jason@mastaler.com>

	* TMDA 0.72 is released.

2003-03-07  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.71 is released.

2003-02-20  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.70 is released.

	* THANKS (Contributions): Add Bernard Johnson.

2003-02-03  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.69 is released.

	* THANKS (Contributions): Add Jesse Guardiani.

2003-01-28  Tim Legant  <tim@catseye.net>

	* THANKS (Contributions): Add Jonathan Ellis.

2003-01-24  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* THANKS (Contributions): Add Chris Hardie & Cory Wright.
	
2003-01-07  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.68 is released.

	* THANKS (Contributions): Add Jim Geovedi.

2002-12-31  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>

	* TMDA 0.67 is released.

2002-12-16  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
