@@ -1,186 +1,191 @@
-<HTML>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Jul 11 16:42:53 2003 -->
-<!-- USING HT2HTML 1.2 -->
-<!-- SEE http://barry.wooz.org/software/ht2html -->
+<!-- Wed Jul 23 13:44:08 2003 -->
+<!-- USING HT2HTML 2.0 -->
+<!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
 Title: TMDA Configuration Variables
 
 -->
 
-<HEAD>
-<TITLE>TMDA Configuration Variables</TITLE>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff" TEXT="#000000"
-      TOPMARGIN="0" LEFTMARGIN="0" MARGINWIDTH="0" MARGINHEIGHT="0"
-      LINK="#0000bb"  VLINK="#551a8b"
-      ALINK="#ff0000">
+<head>
+<title>TMDA Configuration Variables</title>
+<meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
+<meta name="generator" content="HT2HTML/2.0">
+<style type="text/css">
+body { margin: 0px; }
+</style>
+</head>
+<body bgcolor="#ffffff" text="#000000"
+      marginwidth="0" marginheight="0"
+      link="#0000bb"  vlink="#551a8b"
+      alink="#ff0000">
 <!-- start of page table -->
-<TABLE WIDTH="100%" BORDER=0 CELLSPACING=0 CELLPADDING=0>
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
 <!-- start of banner row -->
-<TR>
+<tr>
 <!-- start of corner cells -->
-<TD WIDTH=150 VALIGN=CENTER BGCOLOR="#afeeee">
+<td width="150" valign="middle" bgcolor="#afeeee" class="corner">
 <center><font size="+2"
-        >&gt;&gt;&gt;&nbsp;TMDA&nbsp</font></center> </TD>
-<TD WIDTH=15 BGCOLOR="#cccccc">&nbsp;&nbsp;</TD><!--spacer-->
+        >&gt;&gt;&gt;&nbsp;TMDA&nbsp</font></center> </td>
+<td width="15" bgcolor="#cccccc">&nbsp;&nbsp;</td><!--spacer-->
 <!-- end of corner cells -->
 <!-- start of banner -->
-<TD WIDTH="90%" BGCOLOR="#cccccc">
+<td width="90%" bgcolor="#cccccc" class="banner">
 <!-- start of site links table -->
-<TABLE WIDTH="100%" BORDER=0
+<table width="100%" border="0"
 CELLSPACING=0 CELLPADDING=0
-       COLS=4 ROWS=1 BGCOLOR="#ffffff">
-<TR>
-    <TD BGCOLOR="#cccccc">
+       bgcolor="#ffffff">
+<tr>
+    <td bgcolor="#cccccc">
 <a href="./index.html">TMDA Homepage</a><br>[    <a href="http://www.au.tmda.net/">AU</a> |    <a href="http://www.us.tmda.net/">US</a>     mirror ]
-    </TD>
-    <TD BGCOLOR="#cccccc">
+    </td>
+    <td bgcolor="#cccccc">
 <a href="./tmda-cgi">tmda-cgi</a>
-    </TD>
-    <TD BGCOLOR="#cccccc">
+    </td>
+    <td bgcolor="#cccccc">
 <a href="http://sourceforge.net/projects/tmda">TMDA @ SourceForge</a>
-    </TD>
-    <TD BGCOLOR="#cccccc">
-&nbsp;&nbsp;</TD>
-</TR>
-</TABLE><!-- end of site links table -->
+    </td>
+    <td bgcolor="#cccccc">
+&nbsp;&nbsp;</td>
+</tr>
+</table><!-- end of site links table -->
 
-</TD><!-- end of banner -->
-</TR><!-- end of banner row -->
-<TR><!-- start of sidebar/body row -->
+</td><!-- end of banner -->
+</tr><!-- end of banner row -->
+<tr><!-- start of sidebar/body row -->
 <!-- start of sidebar cells -->
-<TD WIDTH=150 VALIGN=TOP BGCOLOR="#cccccc">
+<td width="150" valign="top" bgcolor="#cccccc" class="sidebar">
 <!-- start of sidebar table -->
-<TABLE WIDTH="100%" BORDER=0 CELLSPACING=0 CELLPADDING=3
-       BGCOLOR="#ffffff">
-<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
+<table width="100%" border="0" cellspacing="0" cellpadding="3"
+       bgcolor="#ffffff">
+<tr><td bgcolor="#191970"><b><font color="#ffffff">
 Overview
-</FONT></B></TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="index.html">Introduction</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="history.html">History</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="features.html">Features</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="results.html">Results &amp; Testimonials</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="inuse.html">TMDA In Use</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="press.html">Press Coverage</A><!-- -*- html -*- -->
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">&nbsp;
-<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
+</font></b></td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="index.html">Introduction</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="history.html">History</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="features.html">Features</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="results.html">Results &amp; Testimonials</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="inuse.html">TMDA In Use</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="press.html">Press Coverage</a><!-- -*- html -*- -->
+</td></tr>
+<tr><td bgcolor="#cccccc">&nbsp;
+<tr><td bgcolor="#191970"><b><font color="#ffffff">
 Install
-</FONT></B></TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="requirements.html">Requirements</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="download.html">Download</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="install.html">Installation</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="upgrade.html">Upgrading</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">&nbsp;
-<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
+</font></b></td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="requirements.html">Requirements</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="download.html">Download</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="install.html">Installation</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="upgrade.html">Upgrading</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">&nbsp;
+<tr><td bgcolor="#191970"><b><font color="#ffffff">
 Configuration
-</FONT></B></TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="config.html">Overview</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="config-pre.html">Pre-Configuration</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="config-server.html">Server Configuration</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="config-client.html">Client Configuration</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
+</font></b></td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="config.html">Overview</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="config-pre.html">Pre-Configuration</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="config-server.html">Server Configuration</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="config-client.html">Client Configuration</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
 <b>Configuration Variables</b>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="config-filter.html">Filter Specification</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="filter-sources.html">Filter Sources</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">&nbsp;
-<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="config-filter.html">Filter Specification</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="filter-sources.html">Filter Sources</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">&nbsp;
+<tr><td bgcolor="#191970"><b><font color="#ffffff">
 HOWTOs
-</FONT></B></TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="howtos.html">Overview</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="howto-template.html">Templates</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="tmda-ofmipd.html">tmda-ofmipd</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="tmda-vdomains.html">Virtual Domains</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">&nbsp;
-<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
+</font></b></td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="howtos.html">Overview</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="howto-template.html">Templates</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="tmda-ofmipd.html">tmda-ofmipd</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="tmda-vdomains.html">Virtual Domains</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">&nbsp;
+<tr><td bgcolor="#191970"><b><font color="#ffffff">
 Support
-</FONT></B></TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="trouble.html">Troubleshooting</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
+</font></b></td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="trouble.html">Troubleshooting</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
 <a href="http://tmda.net/faq.cgi" TARGET="Resource Window">FAQ</a>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="bugs.html">Bugs &amp; Patches</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="bugs.html">Bugs &amp; Patches</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
 <a href="http://tmda.net/lists/listinfo/" TARGET="Resource Window">Mailing Lists</a>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
+</td></tr>
+<tr><td bgcolor="#cccccc">
 <a href="http://mla.libertine.org/" TARGET="Resource Window">List Archive</a> 
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="support-commercial.html">Commercial Support</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="resources.html">External Resources</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="mirrors.html">Mirrors</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">&nbsp;
-<TR><TD BGCOLOR="#191970"><B><FONT COLOR="#ffffff">
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="support-commercial.html">Commercial Support</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="resources.html">External Resources</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="mirrors.html">Mirrors</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">&nbsp;
+<tr><td bgcolor="#191970"><b><font color="#ffffff">
 Author
-</FONT></B></TD></TR>
-<TR><TD BGCOLOR="#cccccc">
-<A HREF="mailto:jason@mastaler.com">Jason R. Mastaler</A>
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
+</font></b></td></tr>
+<tr><td bgcolor="#cccccc">
+<a href="mailto:jason@mastaler.com">Jason R. Mastaler</a>
+</td></tr>
+<tr><td bgcolor="#cccccc">
 &nbsp;
-</TD></TR>
-<TR><TD BGCOLOR="#cccccc">
+</td></tr>
+<tr><td bgcolor="#cccccc">
 &copy; 2001-2003
-</TD></TR>
-</TABLE><!-- end of sidebar table -->
+</td></tr>
+</table><!-- end of sidebar table -->
 
-</TD>
-<TD WIDTH=15>&nbsp;&nbsp;</TD><!--spacer-->
+</td>
+<td width="15">&nbsp;&nbsp;</td><!--spacer-->
 <!-- end of sidebar cell -->
 <!-- start of body cell -->
-<TD VALIGN=TOP WIDTH="90%"><BR>
+<td valign="top" width="90%" class="body"><br>
 <h3>TMDA Configuration Variables</h3>
 
 <ul>
@@ -1013,6 +1018,8 @@ Examples:
 <code>DELIVERY = "~/Maildir/"</code><br>
 <code>DELIVERY = "~/Mailbox"</code><br>
 <code>DELIVERY = "/var/mail/jasonrm"</code><br>
+<code>DELIVERY = ":~/Mailbox"</code><br>
+<code>DELIVERY = ":/var/spool/mail/jasonrm"</code><br>
 <code>DELIVERY = "|/usr/bin/maildrop"</code><br>
 <code>DELIVERY = "|/usr/bin/procmail ~/.procmailrc-tmda"</code><br>
 <code>DELIVERY = "me@new.job.com"</code>
@@ -1501,7 +1508,7 @@ No default
 A single character which specifies the separator between user names
 and address extensions (e.g, user-ext).
 The default under qmail is `-', while the default for Sendmail and
-friends is likely `+'.
+friends is likely `+'. The default for MMDF is '='.
 <br><br>
 Default is "-"
 <dt><hr>
@@ -1893,7 +1900,7 @@ Subject: Re: You're fired!
 Default is 0 (turned off)
 </dl>
 
-</TD><!-- end of body cell -->
-</TR><!-- end of sidebar/body row -->
-</TABLE><!-- end of page table -->
-</BODY></HTML>
+</td><!-- end of body cell -->
+</tr><!-- end of sidebar/body row -->
+</table><!-- end of page table -->
+</body></html>
