@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Thu Jul  3 14:34:18 2003 -->
+<!-- Wed Jul 23 12:15:36 2003 -->
 <!-- USING HT2HTML 2.0 -->
 <!-- SEE http://ht2html.sf.net -->
 <!-- User-specified headers:
@@ -214,7 +214,7 @@ a comprehensive web-management facility for TMDA.
 including multi-byte character sets (e.g, Chinese, Japanese, Korean).<br><br>
 
 <li>Local mail delivery, including qmail-style Maildirs, mboxrd-format
-mboxes, program (pipe) delivery, and forward to an e-mail address.<br><br>
+mboxes, MMDF-style mailboxes, program (pipe) delivery, and forward to an e-mail address.<br><br>
 
 <li>Smart auto-responding -- won't reply to a mailing list, bounce
 message, or another auto-response.  Includes auto-response rate limiting
