@@ -1,3 +1,7 @@
+2003-07-23  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
+
+	* THANKS (Contributions): Add Tim Rice.
+
 2003-07-22  Jason R. Mastaler  <jasonrm@hrothgar.la.mastaler.com>
 
 	* TMDA 0.81 is released.
